--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
     "chroma-js": "^2.1.2",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
