--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,10 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/uuid": "^8.3.0",
+    "@types/yup": "^0.29.11",
     "axios": "^0.21.1",
     "chroma-js": "^2.1.2",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
@@ -24,7 +26,8 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "craco start",
