--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "chroma-js": "^2.1.2",
     "formik": "^2.2.9",
     "react": "^17.0.2",
+    "react-accessible-dropdown-menu-hook": "^2.3.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
