--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/chroma-js": "^2.1.3",
     "@types/jest": "^26.0.15",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^12.0.0",
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-dom": "^17.0.0",
@@ -19,10 +20,12 @@
     "axios": "^0.21.1",
     "chroma-js": "^2.1.2",
     "formik": "^2.2.9",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-accessible-dropdown-menu-hook": "^2.3.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
+    "react-google-button": "^0.7.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
